# IL-Datasets

./: .gitignore  .pylintrc  404.html  Dockerfile  LICENSE  README.md  Untitled.ipynb  benchmark_results.md  dev.py  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  setup.cfg  teste.py  train_maze.py
.github/workflows/: pull_request.yml  pylint.yml
about/license/: index.html
about/release-notes/: index.html
algorithms/abco/: index.html
algorithms/bc/: index.html
algorithms/bco/: index.html
algorithms/iupe/: index.html
algorithms/method/: index.html
api/benchmark/: index.html
api/imitation/: index.html
dataset/cartpole/: 0.npz  1.npz  10.npz  11.npz  2.npz  3.npz  4.npz  5.npz  6.npz  7.npz  8.npz  9.npz
development/: find_lr.py
docs/: index.md
docs/about/: license.md  release-notes.md
docs/algorithms/: abco.md  bc.md  bco.md  iupe.md  method.md
docs/api/: benchmark.md  imitation.md
docs/tutorials/: benchmark.md  creation.md  datasets.md  install.md
examples/: Benchmark.ipynb  Creation.ipynb  Training.ipynb
requirements/: benchmark.txt  dev.txt  requirements.txt
search/: search_index.json
src/: create_dataset.py
src/benchmark/: benchmark.py  registers.py
src/benchmark/methods/: __init__.py  abco.py  bc.py  bco.py  dagger.py  gail.py  iupe.py  method.py  sqil.py  utils.py
src/imitation_datasets/: __init__.py  args.py  controller.py  experts.py  functions.py  progressbar.py  t.py  utils.py
src/imitation_datasets/baselines/: benchmark.py
src/imitation_datasets/benchmark/: args.py  registers.py
src/imitation_datasets/dataset/: __init__.py  dataset.py  huggingface.py  metrics.py  random_dataset.py
src/imitation_datasets/datasets/: dataset.py  huggingface.py
src/imitation_datasets/register/: __init__.py  atari.py  classic.py  mujoco.py
tests/: test_cpus.py  test_experts.py  test_registers.py  test_utils.py  test_wrapper.py
tests/baselines/: test_abco.py  test_attention.py  test_bc.py  test_bco.py  test_cnn.py  test_iupe.py  test_mlp.py
tests/benchmark/: test_abco.py  test_attention.py  test_bc.py  test_bco.py  test_cnn.py  test_iupe.py  test_mlp.py
tests/imitation_datasets/: test_cpus.py  test_experts.py  test_functions.py  test_wrapper.py
tutorials/benchmark/: index.html
tutorials/creation/: index.html
tutorials/datasets/: index.html
tutorials/install/: index.html
utils/: args.py  controller.py  experts.py  utils.py
utils/register/: __init__.py  mujoco.py
(+36 files in other folders)
