[metadata]
name = il-datasets
version = 0.2.0
author = Nathan Gavenski
author_email = nathangavenski@gmail.com
description = A package for creating IL datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NathanGavenski/IL-Datasets
project_urls =
bug tracker = https://github.com/NathanGavenski/IL-Datasets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.5
install_requires =
    huggingface_sb3
    stable_baselines3
    sb3_contrib
    tqdm
    torch
    gymnasium
    psutil

[options.packages.find]
where=src
